<resources>
    <string name="app_name">Klassi</string>

    //Pantalla Register
    <string name="str_name">Nombre</string>
    <string name="str_scndname">Apellido</string>
    <string name="str_email">Email</string>
    <string name="str_pwd">Contraseña</string>
    <string name="str_select">Seleccione escolaridad</string>
    <string name="str_btnreg">Registrarse</string>
    <string name="str_btnal">Alumno</string>
    <string name="str_btnprof">Profesor</string>

    //Msg error validación register
    <string name="str_error">Este campo es obligatorio</string>

    //String Genericos
    <string name="gen_spaces"> </string>
    //String de launchers
    <string name="appname">Klassi</string>


    //Pantalla horarios profesor
    <string name="btn_horario">Horarios</string>
    <string name="btn_materia">Materias</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_cancelar">Cancelar</string>


    //Pantalla confirmación 1
    <string name="str_p_cnf1_nombre">Nombre</string>
    <string name="str_p_cnf1_apellido">Apellido</string>
    <string name="str_p_cnf1_localidad">Localidad</string>
    <string name="str_p_cnf1btn">Confirmar</string>

    //Pantalla confirmacion 2
    <string name="str_p_cnf2btn">Cancelar</string>


    //String de Login
    <string name="log_welcome">Bienvenido</string>
    <string name="log_user">Usuario</string>
    <string name="log_password">Contraseña</string>
    <string name="log_button_go">Ingresar</string>
    <string name="log_regmessage">¿Eres nuevo? Registrate</string>
    <string name="log_g">G</string>
    <string name="log_f">F</string>
    <string name="log_hint_user">Ingresa Usuario</string>
    <string name="log_hint_pass">Ingresa contraseña</string>


    //String de perfil
    <string name="perfal_button"> CambiaImagen</string>


    //String de Home
    <string name="home_btntxt">Haz click aqui para generar una Clase</string>
    <string name="home_prox">Aqui estan tus proximas clases</string>
    <string name="home_welcome">Bienvenido a tus clases!</string>

    //String de Busqueda
    <string name="busqueda_welcome">Selecciona las opciones para iniciar tu busqueda de profesores</string>
    <string name="busqueda_button">Busqueda</string>
    <string name="seleccion_profesor_btn">Ver</string>
    <string name="seleccion_profesor_nombre">Nombre</string>
    <string name="lista_seleccion_profesor_btn">Atras</string>

    <string name="clases_dos_botones">Clases a confirmar</string>


    //String de Profesores
    <string name="profesores_welcome">Aqui se encuentran los profesores disponibles para tu busqueda!</string>
    <string name="home_profesor">Bienvenido Profe !</string>
    <string name="titulo_home_profesor">Estas son tus ultimas clases aceptadas:</string>
    <string name="home_profesor_zonas">Zonas: </string>
    <string name="home_profesor_materias">Materias: </string>
    <string name="home_filtros">Filtros seleccionados:</string>
    <string name="perfil_profesor_premiun_string">Go Premiun</string>


    //String de boton
    <string name="Agregar">Agregar</string>

    <string name="add_zona_profesor">Agregar zona</string>

    //String de Clases
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_rechazar">Rechazar</string>


</resources>
