<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/reg_pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/str_pwd"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/reg_mail_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reg_mail_txt"
        app:layout_constraintTop_toBottomOf="@+id/reg_mail_txt" />

    <Button
        android:id="@+id/reg_reg_btn"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/str_btnreg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/str_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- este modulo no utiliza la Barra superior
    <include
        android:id="@+id/maintoolbar"
        layout="@layout/toolbar"/>
    -->

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="202dp" />

    <ImageView
        android:id="@+id/reg_logo_img"
        android:layout_width="381dp"
        android:layout_height="145dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_name_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@drawable/logo" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="103dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/reg_pass_txt"
        app:layout_constraintStart_toStartOf="@+id/reg_pass_txt"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass_txt">

        <RadioButton
            android:id="@+id/reg_prof_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_btnprof" />

        <RadioButton
            android:id="@+id/reg_al_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_btnal" />
    </RadioGroup>

    <EditText
        android:id="@+id/reg_mail_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/str_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/reg_name_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reg_name_txt"
        app:layout_constraintTop_toBottomOf="@+id/reg_name_txt" />

</android.support.constraint.ConstraintLayout>