<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profesor.PerfilProfesor" >

    <include
        android:id="@+id/maintoolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pnt_cnf2_nomal"
        android:layout_width="149dp"
        android:layout_height="34dp"
        android:layout_below="@+id/maintoolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:text="@string/gen_spaces" />


    <TextView
        android:id="@+id/perfil_profesor_apellido"
        android:layout_width="149dp"
        android:layout_height="34dp"
        android:layout_below="@+id/pnt_cnf2_nomal"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="8dp"
        android:text="@string/gen_spaces" />

    <TextView
        android:id="@+id/pnt_cnf2_mailal"
        android:layout_width="149dp"
        android:layout_height="34dp"
        android:layout_below="@+id/perfil_profesor_apellido"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="8dp"
        android:text="@string/gen_spaces"/>

    <ImageView
        android:id="@+id/pnt_cnf2_imgprof"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_below="@+id/maintoolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/perprof_btn_setimagen2"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_below="@+id/pnt_cnf2_imgprof"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/buttons_shape"
        android:text="@string/perfal_button"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="14sp" />


    <Button
        android:id="@+id/perprof_btn_horario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/perprof_btn_materias"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttons_shape"
        android:text="@string/btn_horario"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="14sp" />

    <Button
        android:id="@+id/perprof_btn_materias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pnt_cnf2_lugar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttons_shape"
        android:text="@string/btn_materia"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/pnt_cnf2_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="60dp"
        android:text="@string/gen_spaces" />


</RelativeLayout>