<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:theme="@style/fontStyleAB">

    <include
        android:id="@+id/maintoolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_txt_welcome"
        android:layout_width="238dp"
        android:layout_height="26dp"
        android:text="@string/home_welcome"
        app:layout_constraintBottom_toTopOf="@+id/home_btn_Klassi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maintoolbar"
        app:layout_constraintVertical_bias="0.237" />

    <Button
        android:id="@+id/home_btn_Klassi"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="311dp"
        android:layout_height="149dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/buttons_shape"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/home_btntxt"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maintoolbar"
        app:layout_constraintVertical_bias="0.23" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <TextView
        android:id="@+id/home_txt_clases"
        android:layout_width="336dp"
        android:layout_height="19dp"
        android:layout_marginTop="36dp"
        android:text="@string/home_prox"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <LinearLayout
        android:id="@+id/home_clases_notificadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_txt_clases"></LinearLayout>


</android.support.constraint.ConstraintLayout>